--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,14 @@ APP_KEYS="toBeModified1,toBeModified2"
 API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 JWT_SECRET=tobemodified
+TRANSFER_TOKEN_SALT=
+# Database
+DATABASE_CLIENT=
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_NAME=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
+JWT_SECRET=
+# tiny mce editor api
+TINY_API=
