sending email via strapi is successfull

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,12 @@ DATABASE_PASSWORD=
 JWT_SECRET=
 # tiny mce editor api
 TINY_API=
+
+
+MAIL_PROVIDER=
+EMAIL_SMTP_HOST=
+EMAIL_SMTP_PORT=
+EMAIL_SMTP_USER=
+EMAIL_SMTP_PASS=
+EMAIL_ADDRESS_FROM=
+EMAIL_ADDRESS_REPLY=
