--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-documentation": "4.10.6",
     "@strapi/plugin-i18n": "4.10.6",
     "@strapi/plugin-users-permissions": "4.10.6",
+    "@strapi/provider-email-nodemailer": "^4.10.7",
     "@strapi/strapi": "4.10.6",
     "better-sqlite3": "8.0.1",
     "mysql": "^2.18.1"
